Extended shop padding-bottom to ensure visibility of last of products

--- a/frontend/styles/modules/_shop.scss
+++ b/frontend/styles/modules/_shop.scss
@@ -20,7 +20,8 @@
 }
 
 .shop__products {
-    height: 150%;
+    padding-bottom: 150px;
+    height: 100%;
     overflow-x: hidden;
     margin: 0 auto;
     padding: 20px;
